app/assets/stylesheets/framework_and_overrides.css.scss
/* ... */
// override for the 'Home' navigation link
.navbar-brand {
  font-size: inherit;
  }

// THESE ARE EXAMPLES YOU CAN MODIFY
// create your own classes
// to make views framework-neutral
.column {
  @extend .col-md-6;
  @extend .text-center;
  }
.form {
  @extend .col-md-6;
  }
.form-centered {
  @extend .col-md-6;
  @extend .text-center;
  }
.submit {
  @extend .btn;
  @extend .btn-primary;
  @extend .btn-lg;
  }
// apply styles to HTML elements
// to make views framework-neutral
main {
  @extend .container;
  background-color: #eee;
  padding-bottom: 80px;
  width: 100%;
  margin-top: 51px; // accommodate the navbar
  background-image: $main-bg;
  }
body {
    background-image: $main-bg;
}
section {
  @extend .row;
  margin-top: 20px;
  }

// Styles for Devise views
// using Bootstrap
// generated by the rails_layout gem
.center{
    text-align:center;
}
.authform {
  padding-top: 30px;
  max-width: 50%;
  margin: 0 auto;
}
.authform form {
  @extend .well;
  @extend .well-lg;
  padding-bottom: 40px;
}
.authform .right {
  float: right !important;
}
.authform .button {
  @extend .btn;
  @extend .btn-primary;
}
.authform fieldset {
  @extend .well;
}
#error_explanation {
  @extend .alert;
  @extend .alert-danger;
}
#error_explanation h2 {
  font-size: 16px;
}
.button-xs {
  @extend .btn;
  @extend .btn-primary;
  @extend .btn-xs;
}
.jumbotron h1{
    color: $jumbo-header;
}
.jumbotron{
    border-radius: $jumbotron-border-radius;
    border: $jumbotron-border;
    box-shadow: 0px 0px 5px #9fa0a1;
}
.panel{
    
    box-shadow: 2px 2px 5px #9fa0a1;
}

/* STAR>T CODEPEN*/

body {
  margin: 0;
  padding: 0;
  font-family: 'Noto Serif', serif;
  color: #58595b;
}
h1 {
  font-family: 'Open Sans Condensed', sans-serif;
  font-size: 24px;
  font-weight: bold;
  text-transform: uppercase;
  margin: 0;
  padding: 0;
  line-height: 40px;
  border-bottom: 1px solid #9fa0a1;
}
p {
  font-size: 16px;
  font-weight: normal;
  line-height: 22px;
}
a {
  text-decoration: none;
}
.content {
  height: 600px;
  margin: 20px auto;
  padding: 40px;
  background: $content-bg;
  box-shadow: 0px 0px 5px #9fa0a1;
  overflow: hidden;
}
#servicing {

  border-right: 1px solid #9fa0a1;
  padding-right: 40px;
  float: left;
}
#bike {
}
.number {
  background: #F57F20;
  padding: 5px 13px;
  border-radius: 50px;
  color: #ffffff;
  font-family: 'Open Sans Condensed', sans-serif;
  font-weight: bold;
  box-shadow: 0px 0px 5px #333333;
  position: absolute;
}
.one {
  top: 230px;
  left: 110px;
}
.two {
  top: 80px;
  left: 225px;
}
.three {
  top: 255px;
  left: 272px;
}
.four {
  top: 80px;
  left: 430px;
}
.five {
  top: 230px;
  left: 495px;
}
#m-steps {
  height: 100px;
  clear: both;
}
.five-step {
  width: 130px;
  height: 130px;
  background: #dff0d8;
  border-radius: 100px;
  padding: 20px;
  float: left;
  margin: 40px 10px 0 0;
  border:1px solid #3c9a5f;
}

.glyphicon{
  font-size: 5em;
}


.ui-tooltip, .arrow:after {
    background: #58595b;
  }
  .ui-tooltip {
    padding: 5px 10px;
    color: white;
    width: 150px;
    text-align: center;
    font-family: 'Open Sans', sans-serif;
    font-weight: light;
    font-size: 16px;
    border: none;
    border-radius: 0;
    opacity: 0.9
  }
  .arrow {
    width: 70px;
    height: 16px;
    overflow: hidden;
    position: absolute;
    left: 50%;
    margin-left: -35px;
    bottom: -16px;
  }
  .arrow.top {
    top: -16px;
    bottom: auto;
  }
  .arrow.left {
    left: 20%;
  }
  .arrow:after {
    content: "";
    position: absolute;
    left: 20px;
    top: -20px;
    width: 25px;
    height: 25px;
    -webkit-transform: rotate(45deg);
    -moz-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    -o-transform: rotate(45deg);
    tranform: rotate(45deg);
  }
  .arrow.top:after {
    bottom: -20px;
    top: auto;
  }
.fade {
  display: none;
}
.panel{
    height:100%;
}
h1, h2, h3, h4, h5, h6 {
    font-family: 'Corben', Georgia, Times, serif;
}
p, div {
    font-family: 'Nobile', Helvetica, Arial, sans-serif;
}

